# picmouse

./: README.md  pyproject.toml  requirements.txt
picmouse/: cli.py  utils.py
