[tool.poetry]
name = "picmouse"
version = "0.1.0"
description = ""
authors = ["Toni Sredanovic <toni.sredanovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
